Increase space for main icons on the landing page (This fixes some overflowing texts in translations)

--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -122,7 +122,13 @@ h2 .rssicon{
 	font-family:Arial, sans-serif;
 }
 
-.mainlist>div>div{
+.mainlist>div:first-child{
+	text-align:right;
+}
+.mainlist>div:first-child+div+div{
+	text-align:left;
+}
+.mainlist>div>div>div{
 	text-align:right;
 }
 .mainlist img{
