--- a/_less/screen.less
+++ b/_less/screen.less
@@ -423,11 +423,13 @@ table td,table th{
 }
 .mainlist{
 	font-size:125%;
-	margin:30px 0;
+	width:760px;
+	margin:30px auto;
+	display:table;
 }
 .mainlist>div{
-	width:250px;
-	display:inline-block;
+	display:table-cell;
+	min-width:240px;
 }
 .mainlist>div>div{
 	display:inline-block;
@@ -2255,6 +2257,7 @@ h2 .rssicon{
 		width:100%;
 		height:100%;
 	}
+	.mainlist,
 	.mainlist>div{
 		width:auto;
 		display:block;
